<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_lock">New Lock</string>
    <string name="title_activity_new_lock2">New Lock2</string>
    <string name="button_new_lock">New Lock</string>
    <string name="button_load_locks">Load Locks</string>
    <string name="button_edit_locks">Edit Locks</string>
    <string name="button_create">Create</string>
    <string name="button_save">Save</string>
    <string name="app_name">Lockdown</string>
    <string name="action_settings">Settings</string>
    <string name="lock_unlock_time">Unlock Time</string>
    <string name="lock_title">Title</string>
    <string name="contact1_prompt">1st Contact</string>
    <string name="contact2_prompt">2nd Contact</string>
    <string name="contact3_prompt">3rd Contact</string>
    <string name="lock_title_hint">Lockdown</string>
    <string name="title_activity_new_lock3">NewLock3Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="title_activity_friend_adapter">FriendAdapter</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_lock_list">Locks</string>
    <string name="title_activity_locker">LockerActivity</string>

</resources>
